# model-optimization-mcp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: agent-skill-pack.md  architecture.md  deployment.md  enterprise-blueprint.md  extending-runners.md  mediatek-neuropilot-comparable-design.md  security.md  tool-reference.md  v2-comprehensive-design.md  v2-research-audit-report.html
examples/: claude_desktop_config.json  codex_mcp_config.json  intake_to_recipe_request.json  onboarding_request.json
skills/device-farm-aws/: SKILL.md
skills/device-farm-evaluation/: SKILL.md
skills/gpu-capacity-planning/: SKILL.md
skills/intent-intake/: SKILL.md
skills/kpi-regression-analysis/: SKILL.md
skills/model-onboarding/: SKILL.md
skills/platform-conversion-mediatek/: SKILL.md
skills/platform-conversion-qualcomm/: SKILL.md
skills/platform-failure-analysis/: SKILL.md
skills/platform-profiling/: SKILL.md
skills/ptq-execution/: SKILL.md
skills/recipe-authoring/: SKILL.md
skills/release-reporting/: SKILL.md
src/model_optimization_mcp/: __init__.py  app.py  cli.py  config.py  schemas.py  server.py  store.py  utils.py
src/model_optimization_mcp/adapters/: __init__.py  gpu.py
src/model_optimization_mcp/services/: artifacts.py  catalog.py  control_plane.py  device_farm.py  intent_planner.py  job_manager.py  onboarding.py  resource_manager.py  skill_orchestrator.py  workspace_manager.py
tests/: test_intake_recipe_device_loop.py  test_onboarding_flow.py  test_platform_aware.py  test_resource_manager.py  test_workspace_manager.py
